--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/core": "^6.0.21",
+    "@mantine/dates": "^6.0.21",
+    "@mantine/hooks": "^6.0.21",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +21,7 @@
     "classnames": "^2.5.1",
     "clean-webpack-plugin": "^4.0.0",
     "date-fns": "^3.3.1",
+    "mantine-react-table": "^1.3.4",
     "mini-css-extract-plugin": "^2.8.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
