--- a/react/package.json
+++ b/react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@automattic/webpack-rtl-plugin": "^6.0.0",
+    "@emotion/react": "^11.11.4",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
