--- a/unobackend/.env-example
+++ b/unobackend/.env-example
@@ -7,7 +7,7 @@ MYSQL_PORT=3306
 DEBUG=on
 PRODUCTION=off
 
-OSS_ACCESS_KEY_ID=LTAI5tPwpsLtqXmJoH2FpXsf
-OSS_ACCESS_KEY_SECRET=jL1gPZTPaEF6d3JyGWEUCrZz22pxa9
+OSS_ACCESS_KEY_ID=
+OSS_ACCESS_KEY_SECRET=
 OSS_BUCKET_NAME=ghassen
-OSS_ENDPOINT=oss-us-west-1.aliyuncs.com
+OSS_ENDPOINT=
